Fix globs on classpath (#739)